[package]
name = "prproj_wasm"
version = "0.1.0"
authors = ["Jakub Koralewski\\ <contact@jcubed.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
prproj = {path = "../prproj-rs"}
wasm-bindgen = "0.2"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
wasm-bindgen-test-macro = "0.3"

[profile.release]
opt-level = "s"
debug = true

